--- a/plop-templates/component.hbs
+++ b/plop-templates/component.hbs
@@ -1,11 +1,13 @@
+import { HTMLAttributes } from 'react'
+
 interface {{properCase name}}Props extends HTMLAttributes<HTMLElement> {}
 
-const {{properCase name}} = ({ children }: {{properCase name}}Props): JSX.Element | null => {
+const {{properCase name}} = ({ children, className, ...htmlAttributes }: {{properCase name}}Props): JSX.Element | null => {
 	return (
-		<div>
+		<div className={className} {...htmlAttributes}>
 			{children}
 		</div>
-	);
-};
+	)
+}
 
-export default {{properCase name}};
+export default {{properCase name}}
