--- a/plop-templates/layout.hbs
+++ b/plop-templates/layout.hbs
@@ -9,7 +9,7 @@ const {{properCase name}} = ({ children }: {{properCase name}}Props): JSX.Elemen
 		<>
 			{children}
     </>
-	);
-};
+	)
+}
 
-export default {{properCase name}};
+export default {{properCase name}}
