--- a/plop-templates/page.hbs
+++ b/plop-templates/page.hbs
@@ -1,7 +1,7 @@
-import { NextPage } from 'next';
+import { NextPage } from 'next'
 
 const {{properCase name}}: NextPage = (): JSX.Element | null => {
   return <></>
 }
 
-export default {{properCase name}};
+export default {{properCase name}}
