--- a/plop-templates/layout.hbs
+++ b/plop-templates/layout.hbs
@@ -4,7 +4,7 @@ interface {{properCase name}}Props {
 }
 
 /** Main description for this component. */
-const {{properCase name}} = ({ children }: {{properCase name}}Props): JSX.Element | null => {
+const {{properCase name}}Layout = ({ children }: {{properCase name}}Props): JSX.Element | null => {
 	return (
 		<>
 			{children}
@@ -12,4 +12,4 @@ const {{properCase name}} = ({ children }: {{properCase name}}Props): JSX.Elemen
 	)
 }
 
-export default {{properCase name}}
+export default {{properCase name}}Layout
